--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "ui-components",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@fran-dv/ui-components",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
